# pacman_sdl3

./: .gitignore  CMakeLists.txt  README.md  consignes.txt
